--- a/style.css
+++ b/style.css
@@ -45,6 +45,11 @@ body {
   width: 100%;
   height: 60vh;
 }
+@media screen and (max-width: 768px) {
+  .container-general .gallery-wrap {
+    flex-direction: column;
+  }
+}
 .container-general .gallery-wrap .item {
   flex: 1;
   height: 100%;
@@ -54,7 +59,7 @@ body {
   transition: all 0.8s ease;
 }
 .container-general .gallery-wrap .item:hover {
-  flex: 5;
+  flex: 7;
 }
 
 .wrap-effect-1 .item:first-of-type {
